# routes/index.js
@@ -1,5 +1,5 @@
 import {Router} from 'express'
-
+import {carRoutes} from './car.js'
 import swaggerUi from 'swagger-ui-express'
 import swaggerDocument from '../swagger.json' with {type:"json"}
 import passport from 'passport'
@@ -9,11 +9,11 @@ const router = Router()
 router.use('/api-docs',swaggerUi.serve)
 router.get('/api-docs', swaggerUi.setup(swaggerDocument))
 
-router.use("/truck",)
-router.use("/user",)
+// router.use("/truck",)
+// router.use("/user",)
 //not sure likes will work like this, likes could be a feature of users. 
-router.use("/suv",)
-router.use("/car",)
+// router.use("/suv",)
+router.use("/car",carRoutes)
 
 router.get("/login",passport.authenticate('github'),(req,res)=>{})
 
